[package]
name = "ethereum-interfaces"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[features]
consensus = []
sentry = []
remotekv = []
snapshotsync = []
txpool = []
web3 = []

[dependencies]
arrayref = "0.3"
ethereum-types = { version = "0.13", default-features = false }
ethnum = { version = "1", default-features = false }
prost = "0.11"
tonic = "0.8"

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"
